# portfolio

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  setup.cfg  setup.py
data/nginx/: portfolio.conf
nginx/: Dockerfile  nginx.conf
portfolio/: Dockerfile  main.py  requirements.txt
portfolio/static/css/: main.css  main.css.map
portfolio/static/js/: main.js
portfolio/static/scss/: main.scss
portfolio/templates/: index.html
src/portfolio/: main.py
src/portfolio/static/css/: main.css  main.css.map  main.min.css  normalize.min.css
src/portfolio/static/scss/: main.scss
src/portfolio/templates/: index.html
yekim/: Dockerfile.dev  Dockerfile.prod  manage.py  requirements.txt
yekim/portfolio/: views.py
yekim/portfolio/templates/portfolio/: index.html
yekim/yekim/: asgi.py  settings.py  urls.py  wsgi.py
