[metadata]
name = portfolio
version = attr: portfolio.__version__
author = Michael Simpson
author_email = mikeysimpson4@gmail.com
url = https://github.com/misimpso
platform = any
description = "Michael Simpson's Portfolio Webapp"
long_description = file: README.md
classifiers = 
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >= 3.10
test_suite = tests
zip_safe = True

[options.packages.find]
exclude = tests
where = src

[bdist_wheel]
universal = 1

[flake8]
doctests = True
exclude =
    .git,
    .eggs,
    __pycache__,
    tests/,
    build/,
    dist/,
    setup.py,
    venv/,
    .github
ignore = W605
max-line-length = 120
